# politeshop

./: .gitignore  .oxfmtrc.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  astro.config.mjs  compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  thoughts.md  uno.config.ts
.changeset/: config.json  forty-insects-play.md  late-donkeys-bake.md
.zed/: settings.json
ai/: .env.example  index.ts  package.json  tsconfig.json
ai/infra/: pyproject.toml
ai/infra/modal/: common.py  qwen3-06b.py  smollm2-17b.py  smollm2-360m.py
app/: README.md  components.json  drizzle.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
browser-ext/: .env.example  package.json  pnpm-lock.yaml
browser-ext1/: tsconfig.json
chrome-ext/: package.json  pnpm-lock.yaml  tsconfig.json  vite.background.config.ts  vite.config.ts  vite.content.config.ts
chrome-extension/: bun.lockb  manifest.json  package-lock.json  package.json  tsconfig.json  watch.ts
docs/: features.md
ext/: .env.example  README.md  package.json  wxt.config.ts
landing/: TODO.md
lib/: CHANGELOG.md  README.md  errors.ts  index.ts  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  types.ts  vite.config.ts
reveng/: .env  .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
reveng-spec/: polite.yaml
server/: auth.go  context.go  go.mod  go.sum  helpers.go  helpers_test.go  main.go  middleware.go  utlis.go  watch-static.ts
shared/: index.ts  (+1 more)
(+286 files in other folders)
