[project]
name = "infra"
version = "0.1.0"
description = "Modal deployment and finetune scripts for POLITEShop AI"
requires-python = ">=3.12"
dependencies = ["modal>=1.5.2"]

[dependency-groups]
dev = ["ruff>=0.15.22", "ty>=0.0.61"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
